# homeland

./: .autocorrectignore  .codeclimate.yml  .dockerignore  .env  .gitignore  .gitlab-ci.yml  .rspec  .rubocop.yml  .rvmrc  .standard.yml  .travis.yml  API.md  Benchmarks.md  CHANGELOG.md  CONTRIBUTE.md  Capfile  Dockerfile  Dockerfile-base  Gemfile  Guardfile  LICENSE  Makefile  PLUGIN_DEV.md  Procfile  Procfile.dev  README  README.ali.md  README.markdown  README.md  README.textile  Rakefile  Vagrantfile  apiary.apib  babel.config.js  bun.lockb  config.ru  docker-compose.yml  dotcloud.yml  dump.rdb  package.json  (+9 more)
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: release.yml  release_base.yml  release_tag.yml  test.yml
app/api/: dispatch.rb
app/cells/: base_cell.rb  cities_cell.rb  comments_cell.rb  locations_cell.rb  topics_cell.rb  users_cell.rb
app/channels/: notification_channel.rb  notifications_channel.rb  replies_channel.rb  users_channel.rb
app/components/: alert_component.html.erb  alert_component.rb  application_component.rb  profile_card_component.html.erb  profile_card_component.rb  reply_component.html.erb  reply_component.rb  reply_to_component.html.erb  reply_to_component.rb  topic_component.html.erb  topic_component.rb
app/controllers/: account_controller.rb  advertisements_controller.rb  application_controller.rb  applications_controller.rb  articles_controller.rb  assets_controller.rb  chats_controller.rb  cities_controller.rb  columns_controller.rb  comments_controller.rb  devices_controller.rb  github_statistics_controller.rb  gridfs_controller.rb  home_controller.rb  jobs_controller.rb  likes_controller.rb  locations_controller.rb  nodes_controller.rb  notes_controller.rb  notifications_controller.rb  open_classes_controller.rb  pages_controller.rb  passwords_controller.rb  photos_controller.rb  polls_controller.rb  posts_controller.rb  replies_controller.rb  search_controller.rb  sections_controller.rb  sessions_controller.rb  settings_controller.rb  sites_controller.rb  (+7 more)
cable/: config.ru
config/: application.rb  boot.rb  cable.yml  config.yml  config.yml.default  database.yml  database.yml.default  deploy.rb  elasticsearch.yml  elasticsearch.yml.default  environment.rb  god.rb  importmap.rb  mailer_daemon.yml.default  memcached.yml  mongoid.yml  mongoid.yml.default  newrelic.yml.default  oneapm.yml  puma-backup.rb  puma-cable.rb  puma-master.rb  puma-web.rb  puma.example.rb  puma.rb  redis.yml  redis.yml.default  routes.rb  schedule.rb  schedule.yml  secrets.yml.default  secrets.yml.sample  shakapacker.yml  sidekiq.yml  skylight.yml  sunspot.yml  thin.yml  thin.yml.default  unicorn.rb  webpacker.yml
coreseek-3.2.13/: INSTALL  README.txt  link_bin.sh
coreseek-3.2.13/mmseg-3.2.13/: Makefile  Makefile.am  Makefile.in  aclocal.m4  bootstrap  config-h.in  config-h.in~  config.h  config.status  configure  configure.in  libtool  test.sh
coreseek-3.2.13/mmseg-3.2.13/autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
coreseek-3.2.13/mmseg-3.2.13/config/: .cvsignore  apu-conf.m4  apu-hints.m4  find_apr.m4  readline.m4  sys_errlist.m4  sys_siglist.m4
coreseek-3.2.13/mmseg-3.2.13/data/: Lexicon_full_words.txt  build_unigram.py  char.stat.txt  mmseg.ini  unigram.txt
coreseek-3.2.13/mmseg-3.2.13/python/: mmseg_interface.cpp  mmseg_interface.h  pymmseg.c  pymmseg.sln  pymmseg.vcproj  tmmseg.py
coreseek-3.2.13/mmseg-3.2.13/ruby/: Makefile  extconf.lin.rb  extconf.win.rb  mmseg-i386-mswin32.def  mmseg-i386-mswin32.exp  readme.txt  rubyapi.cpp  test.rb
coreseek-3.2.13/mmseg-3.2.13/script/: build_thesaurus.py  build_tolower_table.py  char_table_build.py  tolower.txt
coreseek-3.2.13/mmseg-3.2.13/src/: Makefile  Makefile.am  Makefile.in  SegmentPkg.lo  SegmenterManager.lo  StringTokenizer.lo  SynonymsDict.lo  ThesaurusDict.lo  UnigramCorpusReader.lo  UnigramDict.lo  UnigramRecord.lo  Utf8_16.lo  assert.lo  bsd_getopt.lo  config.win.h  csr_mmap.lo  csr_typedefs.h  csr_utils.lo  dictionary.lo  iniparser.lo  libmmseg.la  mk_dist.bat  mmseg  mmseg_main.cpp  mmthunk.lo  segmenter.lo  t1.txt
coreseek-3.2.13/mmseg-3.2.13/src/.deps/: SegmentPkg.Plo  SegmenterManager.Plo  StringTokenizer.Plo  SynonymsDict.Plo  ThesaurusDict.Plo  UnigramCorpusReader.Plo  UnigramDict.Plo  UnigramRecord.Plo  Utf8_16.Plo  assert.Plo  bsd_getopt.Plo  csr_mmap.Plo  csr_utils.Plo  dictionary.Plo  iniparser.Plo  mmseg_main.Po  mmthunk.Plo  segmenter.Plo
coreseek-3.2.13/mmseg-3.2.13/src/.libs/: libmmseg.la  libmmseg.lai
coreseek-3.2.13/mmseg-3.2.13/src/css/: ICorpusReader.h  SegmentPkg.cpp  SegmentPkg.h  Segmenter.h  SegmenterManager.cpp  SegmenterManager.h  SynonymsDict.cpp  SynonymsDict.h  ThesaurusDict.cpp  ThesaurusDict.h  UnigramCorpusReader.cpp  UnigramCorpusReader.h  UnigramDict.cpp  UnigramDict.h  UnigramRecord.cpp  UnigramRecord.h  mmthunk.cpp  mmthunk.h  segmenter.cpp  tolowercase.h
coreseek-3.2.13/mmseg-3.2.13/src/iniparser/: dictionary.c  dictionary.h  iniparser.c
coreseek-3.2.13/mmseg-3.2.13/src/utils/: Singleton.h  StringTokenizer.cpp  StringTokenizer.h  Utf8_16.cpp  Utf8_16.h  assert.c  bsd_getopt.c  bsd_getopt.h  bsd_getopt_win.c  bsd_getopt_win.h  csr.h  csr_assert.h  csr_mmap.c  csr_mmap.h  csr_pool.h  csr_utils.c  csr_utils.h  darts.h  freelist.h  os.h
coreseek-3.2.13/mmseg-3.2.13/src/win32/: changelog.txt  css03.sln  css05.sln  libcss03.vcproj  libcss05.vcproj  mmseg03.vcproj  mmseg05.vcproj  readme.txt  syb.txt  t.txt  t1.txt  t2.txt
db/: schema.rb  seeds.rb
faye_server/: .gitignore  config.ru  thin.yml
lib/: README.md  api.rb  daemon.rb  ftp_sync.rb  homeland.rb  markdown.rb  markdown_converter.rb  markdown_topic_converter.rb  ruby_china.rb  segment.rb  single_sign_on.rb
misc/: logo_flat.psd  small_icons.psd
psd/: buttons.psd
public/: 404.html  422.html  500.html  bdsitemap.txt  robots.txt
script/: mailer_daemon_fetcher  resque  test_mail.rb
spec/: rails_helper.rb  spec_helper.rb
test/: rails_helper.rb  spec_helper.rb  test_helper.rb
(+1780 files in other folders)
